Update portfolio: Add images, new layout, and featured sections

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
             <div class="logo">IMARCA</div>
             <ul>
                 <li><a href="#about">About</a></li>
-                <li><a href="#works-2025">2025 Works</a></li>
-                <li><a href="#works-2024">2024 Works</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -43,53 +42,106 @@
         </div>
     </section>
 
-    <!-- 📚 開発ノウハウ（最も目立つセクション） -->
-    <section id="dev-knowhow" class="highlight-section">
+    <!-- 🌟 High Dividend Portfolio Site (Most Prominent) -->
+    <section id="portfolio-highlight" class="highlight-section">
         <div class="container">
             <div class="highlight-card glass">
-                <div class="highlight-badge">📚 開発ノウハウ</div>
-                <h2>プログラミング苦手な私が、AIと話すだけで、<br class="sp-hide">45日間に3つのアプリを開発・公開できました</h2>
-                <p class="highlight-desc">私が知識ゼロから短期間でアプリを作った話。AIを活用した個人開発の実践記録をnoteで公開中。</p>
-                <a href="https://note.com/dobashi_k/n/n8c4d2ae11ef0" target="_blank" class="btn btn-highlight">👉
-                    noteを読む</a>
+                <div class="highlight-badge">🌟 最新開発プロダクト</div>
+                <h2>日本高配当株ポートフォリオ管理サイト</h2>
+                <p class="highlight-desc">日本高配当株ポートフォリオを管理するためのWebサービスです。<br>配当金の可視化、資産推移のグラフ化など、投資家が必要とする機能を網羅しています。
+                </p>
+                <div class="tech-stack-tags">
+                    <span>Next.js</span>
+                    <span>Supabase</span>
+                    <span>Cloudflare</span>
+                    <span>Stripe決済</span>
+                    <span>Google Cloud</span>
+                    <span>Google認証ログイン</span>
+                </div>
+
+                <!-- Image Gallery -->
+                <div class="project-gallery">
+                    <img src="assets/images/portfoliosite/p1.png" alt="Dashboard" loading="lazy">
+                    <img src="assets/images/portfoliosite/p2.png" alt="Asset Graph" loading="lazy">
+                    <img src="assets/images/portfoliosite/p3.png" alt="Dividend Calendar" loading="lazy">
+                    <img src="assets/images/portfoliosite/p4.png" alt="Portfolio Image 4" loading="lazy">
+                    <img src="assets/images/portfoliosite/p5.png" alt="Portfolio Image 5" loading="lazy">
+                </div>
+                <div class="gallery-scroll-hint">Scroll to see more images</div>
+
+                <div class="work-links center-links">
+                    <a href="https://cashflow-maker-web.pages.dev/" target="_blank" class="btn btn-highlight">👉
+                        サイトを見る</a>
+                </div>
             </div>
         </div>
     </section>
 
-    <!-- 💼 開発実績・プロダクト -->
-    <section id="products" class="works-section">
+    <!-- 💰 High Dividend Analysis Tool (Secondary Highlight) -->
+    <section id="tool-highlight" class="highlight-section secondary-highlight">
         <div class="container">
-            <h2 class="section-title">開発実績・プロダクト</h2>
-            <p class="section-subtitle">個人開発者IMARCAとして、AIを活用しスピーディにツールを開発・提供しています。</p>
+            <div class="highlight-card glass">
+                <div class="work-icon-large">💰</div>
+                <div class="highlight-badge">Chrome拡張機能</div>
+                <h2>日本高配当株 分析ツール</h2>
+                <p class="highlight-desc">両学長の動画で紹介された財務指標を、株情報サイトから自動取得・判定するツールです。<br>
+                    企業の財務健全性を一目で確認でき、投資判断を強力にサポートします。</p>
 
-            <div class="works-grid">
-                <!-- 💰 金融・資産管理ツール -->
-                <div class="work-card glass fade-in-up">
-                    <div class="work-icon">💰</div>
-                    <div class="work-content">
-                        <span class="work-badge">Chrome拡張機能 / ベータ版</span>
-                        <h3>日本高配当株 分析ツール</h3>
-                        <p>両学長の動画で紹介された財務指標を、株情報サイトから自動取得・判定するツールです。</p>
-                        <p class="work-note">※ベータ版です。１次情報の確認もお願いします。</p>
-                        <div class="work-links">
-                            <a href="https://note.com/dobashi_k/n/nf54f23d6fe8c" target="_blank" class="btn">詳細記事を読む</a>
-                            <a href="https://chromewebstore.google.com/detail/cashflow-maker-pro/egdiendoebmajhiiepkmngecacfeinhd?authuser=0&hl=ja&pli=1"
-                                target="_blank" class="btn btn-secondary">ダウンロード（Chrome）</a>
-                        </div>
-                        <p class="work-sub-note">※配当金生活を可視化する「ポートフォリオ管理サイト」も開発中</p>
-                    </div>
+                <div class="tech-stack-tags">
+                    <span>Chrome Extension</span>
+                    <span>JavaScript</span>
+                    <span>DOM Manipulation</span>
                 </div>
 
+                <!-- Image Gallery -->
+                <div class="project-gallery">
+                    <img src="assets/images/kouhaitoubunseki/k1.png" alt="Analysis Result" loading="lazy">
+                    <img src="assets/images/kouhaitoubunseki/k2.png" alt="Tool Interface" loading="lazy">
+                </div>
+
+                <!-- YouTube Embed -->
+                <div class="video-container-large">
+                    <iframe width="100%" height="400"
+                        src="https://www.youtube.com/embed/OUuGPxdvbXo?si=sDkk7_v5uS-g8Jq6" title="日本高配当株分析ツール 操作デモ"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                <p class="video-note">※動画が再生できない場合は <a href="https://www.youtube.com/watch?v=OUuGPxdvbXo"
+                        target="_blank">こちら（YouTube）</a> からご覧ください。</p>
+
+                <div class="work-links center-links">
+                    <a href="https://x.com/dobashikentarou/status/2015016393016807517" target="_blank"
+                        class="btn btn-highlight">詳細（Xポスト）</a>
+                    <a href="https://chromewebstore.google.com/detail/cashflow-maker-pro/egdiendoebmajhiiepkmngecacfeinhd?authuser=0&hl=ja&pli=1"
+                        target="_blank" class="btn btn-secondary btn-large">ダウンロード</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- 💼 Portfolio (Skills & Tools) -->
+    <section id="portfolio" class="works-section">
+        <div class="container">
+            <h2 class="section-title">Other Tools / Skills</h2>
+            <p class="section-subtitle">他にも様々なツールを開発しています。</p>
+
+            <div class="works-grid">
                 <!-- 📝 note読者分析ツール -->
                 <div class="work-card glass fade-in-up delay-1">
                     <div class="work-icon">📝</div>
                     <div class="work-content">
-                        <span class="work-badge sale-badge">販売中 / 30記事まで無料</span>
+                        <span class="work-badge">Chrome拡張機能</span>
                         <h3>note読者分析ツール</h3>
                         <p>自分のnote読者を分析し、AIにペルソナ分析・お勧めテーマ記事を生成するクリエイター向けツールです。</p>
+                        <div class="tech-stack-tags-small">
+                            <span>Chrome Extension</span>
+                            <span>JavaScript</span>
+                            <span>Note API</span>
+                        </div>
                         <div class="work-links">
                             <a href="https://note.com/dobashi_k/n/n999e7525da11" target="_blank" class="btn">詳細記事を読む</a>
-                            <a href="https://x.gd/8HOtO" target="_blank" class="btn btn-secondary">ダウンロード（Chrome）</a>
+                            <a href="https://x.gd/8HOtO" target="_blank" class="btn btn-secondary">ダウンロード</a>
                         </div>
                     </div>
                 </div>
@@ -101,10 +153,24 @@
                         <span class="work-badge sale-badge">販売中</span>
                         <h3>アファメーションツール</h3>
                         <p>パソコンのブラウザ上で動き、目標達成のためのマインドセットを習慣化するツールです。</p>
+                        <div class="tech-stack-tags-small">
+                            <span>Web App</span>
+                            <span>HTML5/CSS3</span>
+                            <span>JavaScript</span>
+                        </div>
                         <a href="https://shambalalife.net/affirmation_tool/lp/index.html?v=2" target="_blank"
                             class="btn">公式サイトを見る</a>
                     </div>
                 </div>
+            </div>
+
+            <!-- CTA Section -->
+            <div class="cta-section bounce-in">
+                <h3>課題を考え、Chrome拡張機能やWebサービス・Webアプリ開発します</h3>
+                <p>AI技術を駆使し、貴社専用の業務自動化ツールを驚きの低コストで開発。<br>
+                    「高額な開発費」の常識を覆し、Chrome拡張ツールやWebサービスで現場の生産性を最大化します。<br>
+                    思ってもいないような解決策やアイデアを提供します。</p>
+                <a href="#contact" class="btn btn-large btn-highlight">お問い合わせはこちら</a>
             </div>
         </div>
     </section>
